--- a/Administracion/templates/Administracion/Tercero/Proveedor/informacion_basica.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/informacion_basica.html
@@ -32,35 +32,35 @@
                                         <input hidden value="{{ json_tipo_identificacion }}" id="json_tipo_identificacion">
                                         <div class="form-row">
                                             <div class="form-group col-xl-4 col-lg-4 col-md-6 col-sm-6">
-                                                {% input_text_tag 'nombre' 'Nombre' placeholder="Ingrese el nombre" maxlength="100" required="" value=valores.nombre mensaje_validacion='Por favor ingrese un nombre' invalido=errores.nombre %}
+                                                {% input_text_tag 'nombre' 'Nombre' placeholder="Ingrese el nombre" maxlength="100" required="" value=proveedor.nombre mensaje_validacion='Por favor ingrese un nombre' invalido=errores.nombre %}
                                             </div>
                                             <div class="form-group col-xl-4 col-lg-4 col-md-6 col-sm-6">
-                                                {% select_tag tipo_identificacion 'tipo_identificacion' 'Seleccione un tipo de identificación' texto_label="Tipo de identificación" value=colaborador.tipo_identificacion_id required="" mensaje_validacion='Por favor seleccione un tipo de identificación' invalido=errores.tipo_identificacion %}
+                                                {% select_tag tipo_identificacion 'tipo_identificacion' 'Seleccione un tipo de identificación' texto_label="Tipo de identificación" value=proveedor.tipo_identificacion_id required="" mensaje_validacion='Por favor seleccione un tipo de identificación' invalido=errores.tipo_identificacion %}
                                             </div>
                                             <div class="form-group col-xl-4 col-lg-4 col-md-6 col-sm-6">
-                                                {% input_text_tag 'nit' 'NIT' placeholder="Ingrese el NIT"  maxlength="100" required="" value=valores.nit mensaje_validacion='Por favor ingrese el el nit.' invalido=errores.numero_contrato %}
+                                                {% input_text_tag 'nit' 'NIT (Sin Dígito de Verificación)' placeholder="Ingrese el NIT"  maxlength="100" required="" value=proveedor.identificacion mensaje_validacion='Por favor ingrese el el nit.' invalido=errores.numero_contrato %}
                                             </div>
                                         </div>
                                         <div class="contenedor-con-borde representante-legal">
                                             <h4>Representante Legal</h4>
                                             <div class="form-row">
                                                 <div class="form-group col-xl-4 col-lg-4 col-md-6 col-sm-6">
-                                                    {% input_text_tag 'nombre_rl' 'Nombre' placeholder="Ingrese el nombre" maxlength="100" required="" value=valores.nombre mensaje_validacion='Por favor ingrese un nombre' invalido=errores.nombre %}
+                                                    {% input_text_tag 'nombre_rl' 'Nombre' placeholder="Ingrese el nombre" maxlength="100" value=proveedor.nombre_rl mensaje_validacion='Por favor ingrese un nombre' invalido=errores.nombre %}
                                                 </div>
                                                 <div class="form-group col-xl-4 col-lg-4 col-md-6 col-sm-6">
-                                                    {% select_tag tipo_identificacion_personas 'tipo_identificacion_personas' 'Seleccione un tipo de identificación' texto_label="Tipo de identificación" value=colaborador.tipo_identificacion_id required="" mensaje_validacion='Por favor seleccione un tipo de identificación' invalido=errores.tipo_identificacion %}
+                                                    {% select_tag tipo_identificacion_personas 'tipo_identificacion_rl' 'Seleccione un tipo de identificación' texto_label="Tipo de identificación" value=proveedor.tipo_identificacion_rl_id mensaje_validacion='Por favor seleccione un tipo de identificación' invalido=errores.tipo_identificacion %}
                                                 </div>
                                                 <div class="form-group col-xl-4 col-lg-4 col-md-6 col-sm-6">
-                                                    {% input_text_tag 'identificacion_rl' 'Número de Identificación' placeholder="Ingrese número de identificación"  maxlength="100" required="" value=valores.nit mensaje_validacion='Por favor ingrese el el nit.' invalido=errores.numero_contrato %}
+                                                    {% input_text_tag 'identificacion_rl' 'Número de Identificación' placeholder="Ingrese número de identificación"  maxlength="100" value=proveedor.identificacion_rl mensaje_validacion='Por favor ingrese el el nit.' invalido=errores.numero_contrato %}
                                                 </div>
                                                 <div class="form-group col-xl-4 col-lg-4 col-md-6 col-sm-6">
-                                                    {% select_tag paises 'pais_rl' 'Seleccione un país' texto_label="País de Expedición" required="" value=objeto.pais_id  mensaje_validacion='Por favor seleccione un país' invalido=errores.pais %}
+                                                    {% select_tag paises 'pais_rl' 'Seleccione un país' texto_label="País de Expedición" value=proveedor.lugar_expedicion_rl.departamento.pais_id  mensaje_validacion='Por favor seleccione un país' invalido=errores.pais %}
                                                 </div>
                                                 <div class="form-group col-xl-4 col-lg-4 col-md-6 col-sm-6">
-                                                    {% select_tag departamentos 'departamento_rl' 'Seleccione un departamento' texto_label="Departamento de Expedición" required="" value=objeto.departamento_id  mensaje_validacion='Por favor seleccione un departamento' %}
+                                                    {% select_tag departamentos 'departamento_rl' 'Seleccione un departamento' texto_label="Departamento de Expedición" value=proveedor.lugar_expedicion_rl.departamento_id  mensaje_validacion='Por favor seleccione un departamento' %}
                                                 </div>
                                                 <div class="form-group col-xl-4 col-lg-4 col-md-6 col-sm-6">
-                                                    {% select_tag municipios 'municipio_rl' 'Seleccione una municipio' texto_label="Ciudad de Expedición" required="" value=objeto.ciudad_id  mensaje_validacion='Por favor seleccione un departamento' %}
+                                                    {% select_tag municipios 'municipio_rl' 'Seleccione un municipio' texto_label="Ciudad de Expedición" value=proveedor.lugar_expedicion_rl_id  mensaje_validacion='Por favor seleccione un departamento' %}
                                                 </div>
                                             </div>
                                         </div>
@@ -69,41 +69,41 @@
                                             <h4>Ubicación</h4>
                                             <div class="form-row">
                                                 <div class="form-group col-xl-4 col-lg-4 col-md-6 col-sm-6">
-                                                    {% select_tag paises 'pais' 'Seleccione un país' texto_label="País" required="" value=objeto.pais_id  mensaje_validacion='Por favor seleccione un país' invalido=errores.pais %}
+                                                    {% select_tag paises 'pais' 'Seleccione un país' texto_label="País" required="" value=proveedor.ciudad.departamento.pais_id  mensaje_validacion='Por favor seleccione un país' invalido=errores.pais %}
                                                 </div>
                                                 <div class="form-group col-xl-4 col-lg-4 col-md-6 col-sm-6">
-                                                    {% select_tag departamentos 'departamento' 'Seleccione un departamento' texto_label="Departamento" required="" value=objeto.departamento_id  mensaje_validacion='Por favor seleccione un departamento' %}
+                                                    {% select_tag departamentos 'departamento' 'Seleccione un departamento' texto_label="Departamento" required="" value=proveedor.ciudad.departamento_id  mensaje_validacion='Por favor seleccione un departamento' %}
                                                 </div>
                                                 <div class="form-group col-xl-4 col-lg-4 col-md-6 col-sm-6">
-                                                    {% select_tag municipios 'municipio' 'Seleccione una municipio' texto_label="Municipio" required="" value=objeto.ciudad_id  mensaje_validacion='Por favor seleccione un departamento' %}
+                                                    {% select_tag municipios 'municipio' 'Seleccione un municipio' texto_label="Municipio" required="" value=proveedor.ciudad_id  mensaje_validacion='Por favor seleccione un departamento' %}
                                                 </div>
                                             </div>
                                         </div>
                                         <br>
                                         <div class="form-row">
                                             <div class="form-group col-xl-4 col-lg-4 col-md-6 col-sm-6">
-                                                {% input_text_tag 'fijo_principal' 'Teléfono Fijo Principal' placeholder="Ingrese el número de Teléfono" maxlength="100" required="" value=valores.fijo_principal mensaje_validacion='Por favor ingrese un número' invalido=errores.fijo_principal %}
+                                                {% input_text_tag 'fijo_principal' 'Teléfono Fijo Principal' placeholder="Ingrese el número de Teléfono" maxlength="100" required="" value=proveedor.telefono_fijo_principal mensaje_validacion='Por favor ingrese un número' invalido=errores.fijo_principal %}
                                             </div>
                                             <div class="form-group col-xl-4 col-lg-4 col-md-6 col-sm-6">
-                                                {% input_text_tag 'movil_principal' 'Teléfono Movil Principal' placeholder="Ingrese el número de Teléfono" maxlength="100" required="" value=valores.movil_principal mensaje_validacion='Por favor ingrese un número' invalido=errores.movil_principal %}
+                                                {% input_text_tag 'movil_principal' 'Teléfono Movil Principal' placeholder="Ingrese el número de Teléfono" maxlength="100" required="" value=proveedor.telefono_movil_principal mensaje_validacion='Por favor ingrese un número' invalido=errores.movil_principal %}
                                             </div>
                                             <div class="form-group col-xl-4 col-lg-4 col-md-6 col-sm-6">
-                                                {% input_text_tag 'fijo_auxiliar' 'Teléfono Fijo Auxiliar' placeholder="Ingrese el número de Teléfono" maxlength="100" value=valores.fijo_auxiliar mensaje_validacion='Por favor ingrese un número' invalido=errores.fijo_auxiliar %}
+                                                {% input_text_tag 'fijo_auxiliar' 'Teléfono Fijo Auxiliar' placeholder="Ingrese el número de Teléfono" maxlength="100" value=proveedor.telefono_fijo_auxiliar mensaje_validacion='Por favor ingrese un número' invalido=errores.fijo_auxiliar %}
                                             </div>
                                             <div class="form-group col-xl-4 col-lg-4 col-md-6 col-sm-6">
-                                                {% input_text_tag 'movil_auxiliar' 'Teléfono Movil Auxiliar' placeholder="Ingrese el número de Teléfono" maxlength="100" value=valores.movil_auxiliar mensaje_validacion='Por favor ingrese un número' invalido=errores.movil_auxiliar %}
+                                                {% input_text_tag 'movil_auxiliar' 'Teléfono Movil Auxiliar' placeholder="Ingrese el número de Teléfono" maxlength="100" value=proveedor.telefono_movil_auxiliar mensaje_validacion='Por favor ingrese un número' invalido=errores.movil_auxiliar %}
                                             </div>
                                             <div class="form-group col-xl-4 col-lg-4 col-md-6 col-sm-6">
-                                                {% input_email_tag 'correo_pincipal' 'Correo electrónico Principal' placeholder="Ingrese el correo electrónico" required="" maxlength="100" value=valores.email_principal mensaje_validacion='Por favor digite el correo electrónico principal.' invalido=errores.email_principal %}
+                                                {% input_email_tag 'correo_pincipal' 'Correo electrónico Principal' placeholder="Ingrese el correo electrónico" required="" maxlength="100" value=proveedor.correo_principal mensaje_validacion='Por favor digite el correo electrónico principal.' invalido=errores.email_principal %}
                                             </div>
                                             <div class="form-group col-xl-4 col-lg-4 col-md-6 col-sm-6">
-                                                {% input_email_tag 'correo_auxiliar' 'Correo electrónico Auxiliar' placeholder="Ingrese el correo electrónico" maxlength="100" value=valores.email_auxiliar mensaje_validacion='Por favor digite el correo electrónico auxiliar.' invalido=errores.email_auxiliar %}
+                                                {% input_email_tag 'correo_auxiliar' 'Correo electrónico Auxiliar' placeholder="Ingrese el correo electrónico" maxlength="100" value=proveedor.correo_auxiliar mensaje_validacion='Por favor digite el correo electrónico auxiliar.' invalido=errores.email_auxiliar %}
                                             </div>
                                             <div class="form-group col-md-6" id="div_inicio_actividad">
-                                                {% input_date_tag 'fecha_inicio_actividad' 'Fecha de Inicio de Actividad' placeholder="Seleccione una fecha"  autocomplete="off" required="" value=valores.fecha_inicio_actividad mensaje_validacion='Por favor seleccione una fecha.' invalido=errores.fecha_inicio_actividad %}
+                                                {% input_date_tag 'fecha_inicio_actividad' 'Fecha de Inicio de Actividad' placeholder="Seleccione una fecha"  autocomplete="off" required="" value=proveedor.fecha_inicio_actividad mensaje_validacion='Por favor seleccione una fecha.' invalido=errores.fecha_inicio_actividad %}
                                             </div>
                                             <div class="form-group col-md-6" id="div_fecha_constitucion">
-                                                {% input_date_tag 'fecha_constitucion' 'Fecha de Constitución' placeholder="Seleccione una fecha"  autocomplete="off" required="" value=valores.fecha_constitucion mensaje_validacion='Por favor seleccione una fecha.' invalido=errores.fecha_constitucion %}
+                                                {% input_date_tag 'fecha_constitucion' 'Fecha de Constitución' placeholder="Seleccione una fecha"  autocomplete="off" required="" value=proveedor.fecha_constitucion mensaje_validacion='Por favor seleccione una fecha.' invalido=errores.fecha_constitucion %}
                                             </div>
                                         </div>
                                         <div class="form-row">
