--- a/Financiero/templates/Financiero/Facturacion/Facturas/index.html
+++ b/Financiero/templates/Financiero/Facturacion/Facturas/index.html
@@ -68,6 +68,7 @@
                                 </tbody>
                             </table>
                         </div>
+                        {% include 'EVA/_common/_paginacion.html' with datos=facturas %}
                     </div>
                     <div class="tab-pane fade" id="tab_borradores" role="tabpanel">
                         <div class="table-responsive">
@@ -103,6 +104,7 @@
                                 </tbody>
                             </table>
                         </div>
+                        {% include 'EVA/_common/_paginacion.html' with datos=borradores %}
                     </div>
                 </div>
             </div>
