EVA-135 fix: Se corrige el título del index de facturas.

--- a/Financiero/templates/Financiero/Facturacion/Facturas/index.html
+++ b/Financiero/templates/Financiero/Facturacion/Facturas/index.html
@@ -1,7 +1,7 @@
 {% extends 'Financiero/_common/base_financiero.html' %}
 {% load static %}
 {% load humanize %}
-<title>{% block titulo %}Terceros{% endblock %}</title>
+<title>{% block titulo %}Facturas{% endblock %}</title>
 {% block styles %}
     <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/datagrid/datatables/datatables.bundle.css' %}">
     <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/fa-regular.css' %}">
