EVA-130 Feat: Se realizan modificaciones en la tarjeta de proveedor Para mostrar un texto cuando aun no se ha diligenciado información

--- a/Administracion/templates/Administracion/_common/_tarjeta_proveedor.html
+++ b/Administracion/templates/Administracion/_common/_tarjeta_proveedor.html
@@ -14,16 +14,22 @@
         <div class="card-body p-0 collapse show">
             <div class="p-3" style="display: block">
                 <h5>
-                    {% for d in objeto.datos %}
-                        {% if d.valor_campo %}
-                            <small class="mt-0 mb-3 text-muted">
-                                <b>{{ d.nombre_campo }}</b>: {{ d.valor_campo }}
-                                {% if d.archivo %}
-                                    <a class="far fa-eye" href="{{ d.archivo }}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Ver Archivo"></a>
-                                {% endif %}
-                            </small>
-                        {% endif %}
-                    {% endfor %}
+                    {% if objeto.datos %}
+                        {% for d in objeto.datos %}
+                            {% if d.valor_campo %}
+                                <small class="mt-0 mb-3 text-muted">
+                                    <b>{{ d.nombre_campo }}</b>: {{ d.valor_campo }}
+                                    {% if d.archivo %}
+                                        <a class="far fa-eye" href="{{ d.archivo }}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Ver Archivo"></a>
+                                    {% endif %}
+                                </small>
+                            {% endif %}
+                        {% endfor %}
+                    {% else %}
+                        <small class="mt-0 mb-3 text-muted">
+                            <b>Ingresa al formulario para diligenciar este item.</b>
+                        </small>
+                    {% endif %}
                 </h5>
             </div>
         </div>
