EVA-130 Feat: Se cambia el icono del menú de mi perfil en proveedores

--- a/Administracion/templates/Administracion/_common/menu_aplicacion.html
+++ b/Administracion/templates/Administracion/_common/menu_aplicacion.html
@@ -50,7 +50,7 @@
 {% else %}
     <li {% if menu_actual == 'perfil' %} class="active" {% endif %}>
         <a href="{% url 'Administracion:proveedor-perfil' %}" title="Mi Perfil" data-filter-tags="proveedor perfil">
-            <i class="fal fa-tasks"></i>
+            <i class="fal fa-address-card"></i>
             <span class="nav-link-text" data-i18n="nav.administracion_proveedor_perfil">Mi Perfil</span>
         </a>
     </li>
