EVA-130 Feat: Se le agrega el botón de volver atrás para el formulario de documentos

--- a/Administracion/templates/Administracion/Tercero/Proveedor/documentos.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/documentos.html
@@ -18,7 +18,7 @@
     <div class="panel-container show">
         <div class="header">
             <h1 class="header-title">
-                <i class='far fa-user'></i> Documentos <span class='fw-300'></span>
+                <i class='far fa-user'></i> Documentos <span class='fw-300'></span><a class="far fa-arrow-circle-left"  href="{% url 'Administracion:proveedor-perfil' %}" data-toggle="tooltip" title="" data-original-title="Volver"></a>
                 <br>
                 <br>
             </h1>
