EVA-130 Feat: Se agrega el completado al perfil de proveedores

--- a/Administracion/templates/Administracion/Tercero/Proveedor/perfil.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/perfil.html
@@ -17,8 +17,9 @@
 {% block main %}
     <div class="panel-container show">
         <div class="header">
-            <h1 class="header-title">
-                <i class='far fa-user'></i> Mi Perfil <span class='fw-300'></span>
+            <h1 class="header-title row">
+                <div class="col-6"><i class='far fa-user'></i> Mi Perfil <span class='fw-300'></span></div>
+                <div class="col-6" style="text-align: end">Completado {{ total }}%<span class='fw-300'></span></div>
                 <br>
                 <br>
             </h1>
