--- a/Administracion/templates/Administracion/Tercero/Proveedor/perfil.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/perfil.html
@@ -27,6 +27,16 @@
         <div class="row">
             <div class="col-xl-12">
                 <div id="panel-1" class="panel">
+                    {% if btn_enviar %}
+                        <div class="panel-hdr">
+                            <div class="col-md-10"></div>
+                            <div class="col-md-2" style="float: right" >
+                                <small style="float: right">
+                                    <a href="javascript:enviarSolicitudProveedor({{ proveedor_id }})" class="btn btn-primary btn-block">Enviar Solicitud</a>
+                                </small>
+                            </div>
+                        </div>
+                    {% endif %}
                     <div class="panel-container show">
                         <div class="panel-content">
                             <div class="panel-group">
@@ -54,4 +64,5 @@
     <script src="{% static 'EVA/Plantilla/js/custom/modificacionesSelect2.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/custom/validaciones/validar_formulario.js' %}"></script>
     <script src="{% static 'Administracion/js/Tercero/entidadesBancarias.js' %}"></script>
+    <script src="{% static 'Administracion/js/Tercero/proveedor.js' %}"></script>
 {% endblock scripts%}
