--- a/EVA/templates/EVA/_common/shortcuts.html
+++ b/EVA/templates/EVA/_common/shortcuts.html
@@ -103,7 +103,7 @@
                         {% endif %}
                     {% else %}
                         <li>
-                            <a href="{% url 'Administracion:proveedor-perfil' %}" class="app-list-item text-white border-0 m-0">
+                            <a href="{% url 'Administracion:proveedor-index' %}" class="app-list-item text-white border-0 m-0">
                                 <div class="icon-stack">
                                     <i class="base base-7 icon-stack-3x opacity-100 color-primary-500 "></i>
                                     <i class="base base-7 icon-stack-2x opacity-100 color-primary-300 "></i>
