EVA-132 Feat: Se agrega una condicion para mostrar el botón de editar formularios del perfil del proveedor

--- a/Administracion/templates/Administracion/_common/_tarjeta_proveedor.html
+++ b/Administracion/templates/Administracion/_common/_tarjeta_proveedor.html
@@ -6,9 +6,11 @@
                 <div class="info-card-text flex-1">
                     {{ objeto.nombre }}
                 </div>
-                <div class="info-card-text flex-1" style="text-align: end" >
-                    <a class="far fa-2x fa-edit" href="{{ objeto.url }}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Editar"></a>
-                </div>
+                {% if not solicitud_activa and not solicitud_proveedor %}
+                    <div class="info-card-text flex-1" style="text-align: end" >
+                        <a class="far fa-2x fa-edit" href="{{ objeto.url }}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Editar"></a>
+                    </div>
+                {% endif %}
             </div>
         </div>
         <div class="card-body p-0 collapse show">
